Finished the client libraries exercises.

--- a/sampleproject/content/src/main/content/jcr_root/apps/netcentric/sampleproject/pages/basepage/basepage.html
+++ b/sampleproject/content/src/main/content/jcr_root/apps/netcentric/sampleproject/pages/basepage/basepage.html
@@ -4,13 +4,11 @@
     </head>
     <body>
         <main class="main">
-
             <sly data-sly-include="header.html" data-sly-unwrap></sly>
-
             <sly data-sly-include="content.html" data-sly-unwrap></sly>
-
             <sly data-sly-include="footer.html" data-sly-unwrap></sly>
-
         </main>
+
+        <sly data-sly-include="scripts.html" data-sly-unwrap></sly>
     </body>
 </html>
