--- a/sampleproject/content/src/main/content/jcr_root/apps/netcentric/sampleproject/pages/basepage/head.html
+++ b/sampleproject/content/src/main/content/jcr_root/apps/netcentric/sampleproject/pages/basepage/head.html
@@ -1,5 +1,9 @@
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>${currentpage.title}</title>
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html" data-sly-unwrap>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>${currentpage.title}</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <css data-sly-call="${clientLib.css @ categories=['sampleproject.publish']}" data-sly-unwrap></css>
+</sly>
